...
            android:text="@string/saved_game"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSettings"
            style="@style/bold_grey_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_30dp"
            android:layout_weight="1"
            android:text="@string/settings"
...
