<resources>
    <string name="app_name">VOUTY</string>
    <string name="tap_to_continue">Klikni pre pokračovanie</string>
    <string name="saved_game">Uložená hra</string>
    <string name="how_to_play">Ako hrať?</string>
    <string name="settings">Nastavenia</string>
    <string name="choose_state">Vyber si štát</string>
    <string name="choose_candidate">Vyber si kandidáta</string>
    <string name="population">Populácia: %s</string>
    <string name="num_of_regions">Počet regiónov: %s</string>
    <string name="birth_region_of_candidate">Rodný región: %s</string>
    <string name="charisma">Charizma</string>
...
